--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit-spring</artifactId>
+            <version>2.0.0.RC1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
